--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve-json": "json-server --watch db.json --host 10.5.48.118 --port 8000"
+    "serve-json": "json-server --watch db.json --port 8000"
   },
   "eslintConfig": {
     "extends": [
