--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "json-server": "^1.0.0-alpha.23",
     "qrcode-svg": "^1.1.0",
     "qrcode.react": "^3.1.0",
