--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "json-server": "^1.0.0-alpha.23",
+    "material-symbols": "^0.22.2",
     "qrcode-svg": "^1.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
