--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,10 @@
 
 # misc
 .DS_Store
+.env
 .env.local
-.env.development.local
 .env.test.local
+.env.development.local
 .env.production.local
 
 npm-debug.log*
